<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="13dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip" >

            <RelativeLayout
                android:id="@+id/rl_bind_bluetooth"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginTop="13.0dip"
                android:background="@drawable/setting_single_selector"
                android:longClickable="true"
                android:onClick="onClick" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="14.0dip"
                    android:text="@string/bind_bluetooth"
                    android:textColor="@color/black"
                    android:textSize="16.0sp" />

                <ImageView
                    android:id="@+id/iv_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12.0dip"
                    android:background="@drawable/g_more_icon"
                    android:contentDescription="@string/empty" />

                <TextView
                    android:id="@+id/tv_bluetooth_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10.0dip"
                    android:layout_toLeftOf="@id/iv_more"
                    android:text="@string/no_bluetooth_bind"
                    android:textColor="@color/text_gray_color_b3b3b3"
                    android:textSize="14.0sp" />
            </RelativeLayout>

            <!-- <RelativeLayout -->
            <!-- android:id="@+id/rl_language_setting" -->
            <!-- android:layout_width="fill_parent" -->
            <!-- android:layout_height="45.0dip" -->
            <!-- android:layout_marginTop="13.0dip" -->
            <!-- android:background="@drawable/setting_single_selector" -->
            <!-- android:longClickable="true" -->
            <!-- android:onClick="onClick" > -->


            <!-- <TextView -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:layout_centerVertical="true" -->
            <!-- android:layout_marginLeft="10.0dip" -->
            <!-- android:text="@string/language_setting" -->
            <!-- android:textColor="@color/black" -->
            <!-- android:textSize="16.0sp" /> -->


            <!-- <TextView -->
            <!-- android:id="@+id/tv_local_name" -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:layout_alignParentRight="true" -->
            <!-- android:layout_centerVertical="true" -->
            <!-- android:layout_marginRight="12.0dip" -->
            <!-- android:text="" -->
            <!-- android:textColor="@color/text_gray_color_b3b3b3" -->
            <!-- android:textSize="14.0sp" /> -->
            <!-- </RelativeLayout> -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13.0dip"
                android:background="@drawable/g_round_box_bg"
                android:orientation="vertical" >

                <!-- 自启动 -->
                <RelativeLayout
                    android:id="@+id/rl_auto_boot"
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:background="@drawable/setting_up_selector" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="14.0dip"
                        android:text="@string/auto_boot"
                        android:textColor="@color/black"
                        android:textSize="16.0sp" />

                    <com.naruto.tpms.app.weight.SwitchButton
                        android:id="@+id/sb_auto_boot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="12.0dip" />
                </RelativeLayout>
                
                <View style="@style/settings_item_horizontal_devider" />
                
                <!-- 屏幕常量 -->
                <RelativeLayout
                    android:id="@+id/rl_screen_setting"
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:background="@drawable/setting_up_selector" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="14.0dip"
                        android:text="@string/keep_screen_switch"
                        android:textColor="@color/black"
                        android:textSize="16.0sp" />

                    <com.naruto.tpms.app.weight.SwitchButton
                        android:id="@+id/sb_screen_trun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="12.0dip" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13.0dip"
                android:background="@drawable/g_round_box_bg"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:background="@drawable/setting_up_selector" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:text="@string/pressure_unit"
                        android:textColor="@color/black"
                        android:textSize="16.0sp" />

                    <RadioGroup
                        android:id="@+id/rg_pressure_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="12.0dip"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/rb_pressure_psi"
                            style="@style/select_radio"
                            android:background="@drawable/radio_left_selector"
                            android:text="@string/pressure_unit_psi" />

                        <RadioButton
                            android:id="@+id/rb_pressure_kpa"
                            style="@style/select_radio"
                            android:background="@drawable/radio_middle_selector"
                            android:text="@string/pressure_unit_kpa" />

                        <RadioButton
                            android:id="@+id/rb_pressure_bar"
                            style="@style/select_radio"
                            android:background="@drawable/radio_right_selector"
                            android:text="@string/pressure_unit_bar" />
                    </RadioGroup>
                </RelativeLayout>

                <View style="@style/settings_item_horizontal_devider" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:background="@drawable/setting_down_selector" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:text="@string/temperature_unit"
                        android:textColor="@color/black"
                        android:textSize="16.0sp" />

                    <RadioGroup
                        android:id="@+id/rg_temperature_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="12.0dip"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/rb_temperature_c"
                            style="@style/select_radio"
                            android:background="@drawable/radio_left_selector"
                            android:text="@string/temperature_unit_c" />

                        <RadioButton
                            android:id="@+id/rb_temperature_f"
                            style="@style/select_radio"
                            android:background="@drawable/radio_right_selector"
                            android:text="@string/temperature_unit_f" />
                    </RadioGroup>
                </RelativeLayout>
            </LinearLayout>
            <!-- <LinearLayout -->
            <!-- android:id="@+id/ll_change_qiya_unit" -->
            <!-- android:layout_width="fill_parent" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:orientation="vertical" > -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13.0dip"
                android:background="@drawable/g_round_box_bg"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="14.0dip"
                        android:text="@string/alarm_voice_switch"
                        android:textColor="@color/black"
                        android:textSize="16.0sp" />

                    <com.naruto.tpms.app.weight.SwitchButton
                        android:id="@+id/sb_alarm_trun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="12.0dip" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_alarm_value_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <View style="@style/settings_item_horizontal_devider" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="35.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="14.0dip"
                            android:text="@string/high_pressure"
                            android:textColor="@color/black"
                            android:textSize="16.0sp" />

                        <TextView
                            android:id="@+id/tv_hp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="12.0dip"
                            android:gravity="right"
                            android:textColor="@color/text_gray_color_b3b3b3" />
                    </RelativeLayout>

                    <com.naruto.tpms.app.weight.MySeekBar
                        android:id="@+id/sb_high_pressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginLeft="14.0dip"
                        android:layout_marginRight="12.0dip"
                        android:paddingLeft="10dip"
                        android:paddingRight="10dip" />

                    <View style="@style/settings_item_horizontal_devider" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="35.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="14.0dip"
                            android:text="@string/low_pressure"
                            android:textColor="@color/black"
                            android:textSize="16.0sp" />

                        <TextView
                            android:id="@+id/tv_lp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="12.0dip"
                            android:gravity="right"
                            android:textColor="@color/text_gray_color_b3b3b3" />
                    </RelativeLayout>

                    <com.naruto.tpms.app.weight.MySeekBar
                        android:id="@+id/sb_low_pressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginLeft="14.0dip"
                        android:layout_marginRight="12.0dip"
                        android:paddingLeft="10dip"
                        android:paddingRight="10dip" />

                    <View style="@style/settings_item_horizontal_devider" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="35.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="14.0dip"
                            android:text="@string/high_temprature"
                            android:textColor="@color/black"
                            android:textSize="16.0sp" />

                        <TextView
                            android:id="@+id/tv_ht"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="12.0dip"
                            android:gravity="right"
                            android:textColor="@color/text_gray_color_b3b3b3" />
                    </RelativeLayout>

                    <com.naruto.tpms.app.weight.MySeekBar
                        android:id="@+id/sb_high_temprature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginLeft="14.0dip"
                        android:layout_marginRight="12.0dip"
                        android:paddingLeft="10dip"
                        android:paddingRight="10dip" />
                </LinearLayout>
            </LinearLayout>
            <!-- </LinearLayout> -->
        </LinearLayout>
    </ScrollView>

</LinearLayout>